# easycalw

./: .env  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  DEMO_CHECKLIST.md  DEPLOY.md  GCLOUD_SETUP.md  Makefile  README.md  UI_REDESIGN_PROMPT.md  memory.md  mini-suggestions.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  vercel.json
openclaw-concierge/: package-lock.json  pyproject.toml  requirements.txt
openclaw-concierge/backend/: .env.template  formatter.py  main.py  vapi_config.py
openclaw-concierge/backend/setup_guide_agent/: agent.py  setup_references.md  skill_registry_allowlist.md  system_prompt.md
openclaw-concierge/backend/setup_guide_agent/context/domain_knowledge_final/: README.md
openclaw-concierge/backend/setup_guide_agent/context/domain_knowledge_final/references/: architecture_production_automations.md  career_job_application_tracker.md  coaching_client_intake.md  community_book_club_guide.md  construction_site_logging.md  consulting_client_onboarding.md  content_newsletter_curation.md  content_podcast_shownotes.md  education_homeschool_curriculum.md  (+31 more)
openclaw-concierge/backend/setup_guide_agent/context/openclaw-docs/: INDEX.md
openclaw-concierge/backend/setup_guide_agent/context/openclaw_skill/: README.md
openclaw-concierge/backend/setup_guide_agent/context/setup_guides/: README.md  docker_setup.md
openclaw-concierge/frontend/: index.html  package-lock.json  package.json  vite.config.js
openclaw-concierge/frontend/src/: App.jsx  EasyClawLanding.jsx  GuidePageView.jsx  InterviewView.jsx  SetupGuideView.jsx  StartScreen.jsx  index.css  useVapi.js
openclaw-concierge/frontend/src/components/: AgentPresence.jsx  LoadingScreen.jsx  OutputDisplay.jsx  Transcript.jsx
(+781 files in other folders)
