[project]
name = "openclaw-concierge"
version = "0.1.0"
description = "OpenClaw Concierge - Interview Phase + Setup Guide Generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI stack
    "fastapi==0.128.3",
    "uvicorn==0.40.0",
    "python-dotenv==1.2.1",
    "pydantic==2.11.7",
    "aiofiles==25.1.0",
    "httpx>=0.27.0",
    "sse-starlette==3.3.3",
    "slowapi>=0.1.9",
    # LLM APIs
    "anthropic>=0.52.0",
    "google-generativeai>=0.8.0",
    "google-genai>=1.68.0",
    "claude-agent-sdk>=0.1.0",
    # Data & search
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
